tests/negative_fixtures/array_type_mismatch.shx
let flags: boolean[] = [true, false, "Test"];
console.log(flags);

let numbers: number[] = [1, 2, "three", 4];
console.log(numbers);
